A few more UI tweaks, including making sure the menu stays in the top right corner and auto-hiding the on-deck horizontal scroll bar.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -35,7 +35,7 @@ body, html {
 
 div {
     &#stream-queue {
-        overflow-x: scroll;
+        overflow-x: auto;
         overflow-y: hidden;
     }
 }
