--- a/app/assets/stylesheets/flexbox.scss
+++ b/app/assets/stylesheets/flexbox.scss
@@ -1,71 +1,48 @@
-/************
- * Containers
- *///////////
-div {
-    &.flex-box-col {
-        display: flex;
-        flex-direction: column;
-        flex: 0;
-        height: 100%;
+/**************
+ * Containers *
+ **************/
+.flexbox {
+    display: flex;
+
+    &.row {
+        flex-direction: row;
     }
 
-    &.flex-box-row {
-        display: flex;
-        flex-direction: row;
+    &.column {
+        flex-direction: column;
+    }
+
+    &.nowrap {
+        flex-wrap: nowrap;
+    }
+}
+
+/*************
+ * Flex sizing
+ *************/
+.flexbox {
+    * {
+        flex-shrink: 1;
+    }
+
+    .child-zero {
         flex: 0 0 auto;
     }
 
-    &.flex-box-content {
-        flex: 1 1 auto;
+    .child-one {
+        flex-grow: 1;
+    }
+
+    .child-five {
+        flex-grow: 5;
     }
 }
 
-/**********************
- * Child element orders
- */////////////////////
-.flex-child-order-one {
-    order: 1;
-}
-
-.flex-child-order-two {
-    order: 2;
-}
-
-/**********************
- * Child element sizing
- */////////////////////
-.flex-child-size-one {
-    flex: 1;
-}
-
-.flex-child-size-two {
-    flex: 2;
-}
-
-.flex-child-size-three {
-    flex: 3;
-}
-
-.flex-child-size-four {
-    flex: 4;
-}
-
-.flex-child-size-five {
-    flex: 5;
-}
-
 /*************************
- * Child element modifiers
- *////////////////////////
-.flex-child-no-grow {
-    flex-grow: 0;
-}
-
-.flex-child-no-shrink {
-    flex-shrink: 0;
-}
-
-.flex-child-size-locked {
-    flex-grow: 0;
-    flex-shrink: 0;
+ * Flexbox child modifiers
+ *************************/
+.flexbox {
+    .width-20 {
+        flex-basis: 20%;
+    }
 }
