--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -2,6 +2,10 @@
 
 a {
     color: $light-purple;
+}
+
+span {
+    color: $light-purple;
 
     &.button {
         font-weight: bold;
@@ -15,6 +19,7 @@ a {
         &:hover {
             color: white;
             background-color: $light-purple;
+            cursor: pointer;
         }
     }
 
@@ -40,16 +45,8 @@ body {
     font-family: arial;
 }
 
-//body, html {
-//    height: 100%;
-//    width: 100%;
-//}
-
-div {
-    &#stream-queue {
-        overflow-x: auto;
-        overflow-y: hidden;
-    }
+body, html {
+    height: 100%;
 }
 
 h1 {
@@ -60,28 +57,81 @@ h3 {
     color: $light-purple;
 }
 
-p {
-    &.beta {
-        color: $light-purple;
+iframe {
+    border: 1px solid $light-purple;
+}
+
+#main-container {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    > div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-left: 0;
+        margin-right: 0;
+
+        // "Switch to" div
+        &:nth-child(1) {
+            flex: 0 0 auto;
+
+            > div {
+                // "Switch to..." text
+                &:nth-child(1) {
+                    flex: 0 0 auto;
+                    padding: 0 5px 0 5px;
+                }
+
+                // Streamer buttons
+                &:nth-child(2) {
+                    flex: 1;
+                }
+
+                // Menu
+                &:nth-child(3) {
+                    flex: 0 0 auto;
+                    padding: 0 5px 0 5px;
+                }
+            }
+        }
+
+        // Main div
+        &:nth-child(2) {
+            flex: 1;
+
+            > iframe {
+                // Main stream player
+                &:nth-child(1) {
+                    flex: 6 0 274px;
+                }
+
+                // Chat panel
+                &:nth-child(2) {
+                    flex: 1 0 340px;
+                }
+            }
+        }
+
+        // On-deck streams div
+        &:nth-child(3) {
+            flex: 0 0 248px;
+            flex-wrap: nowrap;
+            padding-bottom: 15px;
+
+            > iframe {
+                flex: 0 0 410px;
+            }
+        }
     }
 }
 
-span {
-    &.button {
-        font-weight: bold;
-        text-decoration: none;
-        background-color: $dark-purple;
-        padding: 2px 6px 2px 6px;
-        border: 1px solid #cccccc;
-        border-right-color: #333333;
-        border-bottom-color: #333333;
-    }
+#stream-queue {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
 
-    &.button-inactive {
-        @extend .button;
-        opacity: 0.5;
-        color: $dark-purple;
-        background-color: $dark-gray;
-        pointer-events: none;
-    }
+.beta {
+    color: $light-purple;
 }
