Rounded scrollbar thumb to look more like the stock scrollbar.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -170,4 +170,5 @@ iframe {
 ::-webkit-scrollbar-thumb {
     color: $light-purple;
     background-color: $light-purple;
+    border-radius: 100px;
 }
