Adds a "theater mode" link to the menu in the top right corner. When clicked, this hides the stream queue and stretches the main player to fill the screen, while shrinking the chat to the minimum-functional width.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -120,6 +120,10 @@ iframe {
                 // Chat panel
                 &:nth-child(2) {
                     flex: 1 0 340px;
+
+                    &.theater {
+                        flex: 0 0 340px;
+                    }
                 }
             }
         }
@@ -128,6 +132,11 @@ iframe {
         &:nth-child(3) {
             flex: 0 0 253px;
             flex-wrap: nowrap;
+
+            &.theater {
+                flex-basis: 0px;
+                overflow-x: hidden;
+            }
 
             > iframe {
                 flex: 0 0 393px;
