--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <%= render 'partials/beta_tag' %>
+            <%= render 'partials/menu' %>
             <h1>Welcome to the TwitchDeck Beta!</h1>
             <h3>What is TwitchDeck?</h3>
             <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, with volume turned down by default.</p>
