--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -63,6 +63,10 @@ iframe {
     &#main-stream-player {
         border-left: 2px solid $light-purple;
         border-top: 2px solid $light-purple;
+
+        &.hide_chat {
+            border-right: 2px solid $light-purple;
+        }
     }
 
     &#chat {
@@ -121,8 +125,12 @@ iframe {
                 &:nth-child(2) {
                     flex: 1 0 340px;
 
-                    &.theater {
+                    &.theater &:not(.hide_chat) {
                         flex: 0 0 340px;
+                    }
+
+                    &.hide_chat {
+                        flex: 0 0 0px;
                     }
                 }
             }
@@ -136,6 +144,7 @@ iframe {
             &.theater {
                 flex-basis: 0px;
                 overflow-x: hidden;
+                border-right: 1px solid $light-purple;
             }
 
             > iframe {
