--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -52,11 +52,11 @@
                 // Re-organize streamer order based on online status, then by priority.
                 streamers.sort( function ( left_obj, right_obj ) {
                     if ( left_obj[ 'status' ] === 'online' && right_obj[ 'status' ] === 'offline' ) {
-                        return -1;
+                        return - 1;
                     } else if ( left_obj[ 'status' ] === 'offline' && right_obj[ 'status' ] === 'online' ) {
                         return 1;
                     } else {
-                        return left_obj[ 'priority' ] < right_obj[ 'priority' ] ? -1 : 1;
+                        return left_obj[ 'priority' ] < right_obj[ 'priority' ] ? - 1 : 1;
                     }
                 } );
 
@@ -97,7 +97,7 @@
             var iframes = $( '.on-deck-stream' );
             $.each( streamers.slice( 1 ), function ( position, streamer ) {
                 if ( iframes[ position ].src !== get_player_url( streamer[ 'name' ], true ) ) {
-                    if ( !streams_changed ) {
+                    if ( ! streams_changed ) {
                         console.log( "Re-ordering on-deck streamers." );
                     }
                     iframes[ position ].src = get_player_url( streamer[ 'name' ], true );
@@ -163,6 +163,16 @@
                 $( '#stream-queue' ).addClass( 'theater' );
                 $( '#chat' ).addClass( 'theater' );
                 $( '#theater_mode_toggle' ).addClass( 'theater_mode_active' );
+            }
+        } );
+
+        $( '#hide_chat_toggle' ).click( function () {
+            if ( $( '#hide_chat_toggle' ).hasClass( 'hide_chat_mode_active' ) ) {
+                $( '#chat' ).removeClass( 'hide_chat' );
+                $( '#hide_chat_toggle' ).removeClass( 'hide_chat_mode_active' );
+            } else {
+                $( '#chat' ).addClass( 'hide_chat' );
+                $( '#hide_chat_toggle' ).addClass( 'hide_chat_mode_active' );
             }
         } );
 
