--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -67,11 +67,19 @@ iframe {
         &.hide_chat {
             border-right: 2px solid $light-purple;
         }
+
+        &.theater {
+            border-bottom: 2px solid $light-purple;
+        }
     }
 
     &#chat {
         border-top: 2px solid $light-purple;
         border-right: 2px solid $light-purple;
+
+        &.theater {
+            border-bottom: 2px solid $light-purple;
+        }
     }
 }
 
@@ -131,6 +139,7 @@ iframe {
 
                     &.hide_chat {
                         flex: 0 0 0px;
+                        border: hidden;
                     }
                 }
             }
