--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -2,6 +2,7 @@
     <head>
         <title>TwitchDeck - Welcome!</title>
         <%= render 'partials/google_analytics_init' %>
+        <meta name="google-site-verification" content="b7Iy_Ywtwqmdlgv6ySh-PpUzQjGIsPFxZyOiMS0sJS4" />
     </head>
     <body>
         <div class="container-fluid">
