--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta name="google-site-verification" content="b7Iy_Ywtwqmdlgv6ySh-PpUzQjGIsPFxZyOiMS0sJS4" />
