--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<% content_for :head do %>
+    <meta name="google-site-verification" content="b7Iy_Ywtwqmdlgv6ySh-PpUzQjGIsPFxZyOiMS0sJS4" />
+<% end %>
 <html>
     <head>
-        <meta name="google-site-verification" content="b7Iy_Ywtwqmdlgv6ySh-PpUzQjGIsPFxZyOiMS0sJS4" />
+        <%= yield :head %>
         <title>TwitchDeck - Welcome!</title>
         <%= render 'partials/google_analytics_init' %>
     </head>
