Tweaked info on landing page. Put a boundary of 10% on each side on the landing page for more comfortable viewing. Removed the menu on the landing page, as it served no function.
Added a heartbeat function to continue to report back to GA every 4.5 minutes, so real-time users would continue to be represented beyond the 5-minute timeout.

--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -3,7 +3,7 @@
     <title>TwitchDeck</title>
     <%= render 'partials/google_analytics_init' %>
 </head>
-<body>
+<body class="noscroll">
 <div id="main-container">
     <div id="stream-switch-tabs">
         <div id="switch-label">Switch to...</div>
@@ -185,6 +185,12 @@
             // Check if main stream is online
             get_stream_status();
         }, 15000 );
+
+        // Sets up a heartbeat to report back to Google Analytics every 4.5 minutes to keep the "Real Time" metric
+        // alive longer than the 5-minute timeout.
+        setInterval( function () {
+            _gaq.push( [ '_trackEvent', 'Video', 'Playing', 'User is watching streams.' ] )
+        }, 270000 );
     } );
 </script>
 </body>
