--- a/app/views/partials/_menu.erb
+++ b/app/views/partials/_menu.erb
@@ -1,3 +1,3 @@
 <div class="menu">
-    BETA - <a id="theater_mode_toggle" href="#">Theater Mode</a> - <a id="hide_chat_toggle" href="#">Hide Chat</a> - <%= link_to 'Help', root_path %>
+    BETA - <a id="theater_mode_toggle">Theater Mode</a> - <a id="hide_chat_toggle" href="#">Hide Chat</a> - <%= link_to 'Help', root_path %>
 </div>
