--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -27,8 +27,8 @@
     </div>
     <div id="stream-queue">
         <% if @streamers.count > 1 %>
-            <% @streamers[1..-1].each do |streamer| %>
-                <iframe class="on-deck-stream" src="http://player.twitch.tv/?channel=<%= streamer['name'] %>&auto_play=true&muted=true"></iframe>
+            <% @streamers[1..-1].each_with_index do |streamer, index| %>
+                <iframe class="on-deck-stream" src="http://player.twitch.tv/?channel=<%= streamer['name'] %>&auto_play=true&muted=true" style="order: <%= index %>;"></iframe>
             <% end %>
             </div>
         <% end %>
@@ -101,24 +101,38 @@
             }
 
             // Re-organize on-deck streams if they have changed.
+            // If the main streamer has changed, we need to do it the old-fashioned way and change all iframe srcs.
+            // If not, just change the order on each iframe for a smooth change without stuttering.
             var iframes = $( '.on-deck-stream' );
-            $.each( streamers.slice( 1 ), function ( position, streamer ) {
-                if ( iframes[ position ].src !== get_player_url( streamer[ 'name' ], true ) ) {
-                    if ( !streams_changed ) {
-                        console.log( "Re-ordering on-deck streamers." );
+            if ( streams_changed ) {
+                $.each( streamers.slice( 1 ), function ( position, streamer ) {
+                    if ( iframes[ position ].src !== get_player_url( streamer[ 'name' ], true ) ) {
+                        if ( !streams_changed ) {
+                            console.log( "Re-ordering on-deck streamers." );
+                        }
+                        iframes[ position ].src = get_player_url( streamer[ 'name' ], true );
+                        streams_changed = true;
                     }
-                    iframes[ position ].src = get_player_url( streamer[ 'name' ], true );
-                    streams_changed = true;
-                }
-            } );
+                } );
+            } else {
+                $.each( streamers.slice( 1 ), function ( position, streamer ) {
+                    var streamer_iframe = $.grep( iframes, function ( iframe ) {
+                        return iframe.src.indexOf( 'channel=' + streamer[ 'name' ] ) != -1;
+                    } )[ 0 ];
+                    if ( $( streamer_iframe ).css( "order" ) != position ) {
+                        $( streamer_iframe ).css( "order", position );
+                        streams_changed = true;
+                    }
+                } );
+            }
 
             // Update the drop-down order and selected item to match the new order of streamers.
             if ( streams_changed ) {
                 var chat_select = $( '#chat-changer' );
                 chat_select.empty();
-                $.each(streamers, function(_, streamer){
-                    chat_select.append( '<option value="' + streamer['name'] +'">' + streamer['name'] +'</option>' );
-                });
+                $.each( streamers, function ( _, streamer ) {
+                    chat_select.append( '<option value="' + streamer[ 'name' ] + '">' + streamer[ 'name' ] + '</option>' );
+                } );
             }
 
             // Finally, reset the list of "switch to" buttons to match the current stream order and status.
