--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -16,10 +16,15 @@
     </div>
     <div id="main-stream" class="flex_row">
         <div id="main-stream-container">
-            <iframe id="main-stream-player" class="stream" src="http://player.twitch.tv/?channel=<%= @streamers.first['name'] %>&auto_play=true&muted=false"></iframe>
-            <% case @streamers.count %>
-            <% when 2 %>
-                <iframe class="right-stream" src="http://player.twitch.tv/?channel=<%= @streamers[1]['name'] %>&auto_play=true&muted=false"></iframe>
+            <iframe id="main-stream-player" style="order: 0;" src="http://player.twitch.tv/?channel=<%= @streamers.first['name'] %>&auto_play=true&muted=false"></iframe>
+            <% if @streamers.count.between? 2, 4 %>
+                <iframe class="on-deck-stream" style="order: 1;" src="http://player.twitch.tv/?channel=<%= @streamers[1]['name'] %>&auto_play=true&muted=true"></iframe>
+            <% end %>
+            <% if @streamers.count.between? 3, 4 %>
+                <iframe class="on-deck-stream" style="order: 2;" src="http://player.twitch.tv/?channel=<%= @streamers[2]['name'] %>&auto_play=true&muted=true"></iframe>
+            <% end %>
+            <% if @streamers.count == 4 %>
+                <iframe class="on-deck-stream" style="order: 3;" src="http://player.twitch.tv/?channel=<%= @streamers[3]['name'] %>&auto_play=true&muted=true"></iframe>
             <% end %>
         </div>
         <div id="chat-container">
@@ -32,7 +37,7 @@
         </div>
     </div>
     <div id="stream-queue" class="flex_row">
-        <% if @streamers.count > 1 %>
+        <% if @streamers.count > 4 %>
             <% @streamers[1..-1].each_with_index do |streamer, index| %>
                 <iframe class="on-deck-stream" src="http://player.twitch.tv/?channel=<%= streamer['name'] %>&auto_play=true&muted=true" style="order: <%= index %>;"></iframe>
             <% end %>
@@ -194,12 +199,12 @@
         if ( $( '#theater_mode_toggle' ).hasClass( 'theater_mode_active' ) ) {
             $( '#theater_mode_toggle' ).removeClass( 'theater_mode_active' );
             $( '#stream-queue' ).removeClass( 'theater' );
-            $( '#main-stream-player' ).removeClass( 'theater' );
+            $( '#main-stream-container' ).removeClass( 'theater' );
             $( '#chat-container' ).removeClass( 'theater' );
         } else {
             $( '#theater_mode_toggle' ).addClass( 'theater_mode_active' );
             $( '#stream-queue' ).addClass( 'theater' );
-            $( '#main-stream-player' ).addClass( 'theater' );
+            $( '#main-stream-container' ).addClass( 'theater' );
             $( '#chat-container' ).addClass( 'theater' );
         }
     } );
@@ -221,13 +226,13 @@
 
         // Depending on window resolution, resize the on-deck streams so a certain amount are visible.
         var width_divisor;
-        if (window_width > 2240){
+        if ( window_width > 2240 ) {
             // 8 streams in view
             width_divisor = .125;
-        } else if (window_width <= 2240 && window_width > 1600) {
+        } else if ( window_width <= 2240 && window_width > 1600 ) {
             // 5 streams in view
             width_divisor = .20;
-        } else if (window_width <= 1600 && window_width > 1000) {
+        } else if ( window_width <= 1600 && window_width > 1000 ) {
             // 4 streams in view
             width_divisor = .25;
         } else {
@@ -247,21 +252,27 @@
         }, 50 ); //allow some time to flush the css buffer.
     }
 
-    // Whenever the window resizes, re-size on-deck streams to maintain aspect ratio.
-    $( window ).resize( function () {
-        resize_ondeck_streams();
-    } );
-
     // Swap a different chat window whenever the drop-down box changes.
     $( '#chat-changer' ).change( function () {
         $( '#chat' )[ 0 ].src = 'https://twitch.tv/' + $( '#chat-changer option:selected' ).text() + '/chat?popout=';
     } );
 
-    // Set up an interval to update stream layouts on the page every 15 seconds.
+    // Set up an interval to update stream layouts on the page every 5 seconds.
     setInterval( function () {
         // Check if main stream is online
         get_stream_status();
-    }, 15000 );
+    }, 5000 );
+
+    // Only resize streams if Split View isn't in effect.
+    if ( streamers.length > 4 ) {
+        // Whenever the window resizes, re-size on-deck streams to maintain aspect ratio.
+        $( window ).resize( function () {
+            resize_ondeck_streams();
+        } );
+
+        // Resize the on-deck streams at startup to maintain aspect ratio.
+        resize_ondeck_streams();
+    }
 
     // Sets up a heartbeat to report active users beyond the normal 5 minute timeout.
     setInterval( function () {
@@ -273,8 +284,27 @@
         } );
     }, 270000 );
 
-    // Resize the on-deck streams at startup to maintain aspect ratio.
-    resize_ondeck_streams();
+    // Depending on the number of streamers selected, change the layout for optimal viewing.
+    switch ( streamers.length ) {
+        case 2:
+            $( '#main-stream-container' ).addClass( 'split_two' );
+            break;
+        case 3:
+            $( '#main-stream-container' ).addClass( 'split_three' );
+            break;
+        case 4:
+            $( '#main-stream-container' ).addClass( 'split_four' );
+            break;
+    }
+
+    // Disable elements that are not applicable when there are 4 or fewer streamers on-screen.
+    if ( streamers.length <= 4 ) {
+        $( '#stream-queue' ).css( 'display', 'none' );
+
+        if ( streamers.length == 1 ) {
+            $( '#chat-changer' ).css( 'display', 'none' );
+        }
+    }
 </script>
 </body>
 </html>
