--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -150,7 +150,7 @@ select option {
                 border-right: 1px solid $light-purple;
             }
 
-            &:nth-last-child(1) {
+            &:nth-child(2) {
                 border-left: 1px solid $light-purple;
             }
         }
@@ -173,7 +173,7 @@ select option {
                 border-right: 1px solid $light-purple;
             }
 
-            &:nth-last-child(1) {
+            &:nth-child(3) {
                 border-top: 1px solid $light-purple;
                 border-left: 1px solid $light-purple;
             }
